Resolve options-scss sticky position overlap issues with nav and details' summary tags

--- a/src/scss/options-scss/_nav.scss
+++ b/src/scss/options-scss/_nav.scss
@@ -41,6 +41,7 @@ $nav-font-size: 24px;
             flex: none;
             position: sticky;
             top: 0;
+            z-index: 1;
 
             border-right: none;
             border-bottom: general.$section-border;
