--- a/src/scss/options-scss/content/_details.scss
+++ b/src/scss/options-scss/content/_details.scss
@@ -18,6 +18,7 @@
                 background-color: general.$light-gray;
                 position: sticky;
                 top: 0;
+                z-index: 0;
         }
     }
 
